2000-10-30  Akim Demaille  <akim@epita.fr>

	Move the handling of diversions into M4sugar.

	* acgeneral.m4 (_AC_DIVERT, AC_DIVERT, AC_DIVERT_PUSH)
	(AC_DIVERT_POP): Move to...
	* m4sugar.m4 (_m4_divert, m4_divert, m4_divert_push)
	(m4_divert_pop): here.
	* acgeneral.m4: Adjust to use only the M4sugar macros.
	Nevertheless...
	(AC_DIVERT_PUSH, AC_DIVERT_POP): New wrappers around the M4sugar
	macros.
	(_AC_DIVERT(...)): Rename all the diversions names as...
	(_m4_divert(...)): these.

2000-10-30  Pavel Roskin  <proski@gnu.org>

	* m4sh.m4 (AS_EXIT): New macro that exits and makes sure that $?
	is set correctly within the exit trap.
	(AS_TMPDIR): Use it.
	* acgeneral.m4 (AC_MSG_ERROR): Likewise,

2000-10-29  Pavel Roskin  <proski@gnu.org>

	* acgeneral.m4 (AC_CHECK_TOOL): Set VARIABLE also when using the
	cache. From Jim Meyering.
	(AC_PATH_TOOL): Likewise.

2000-10-29  Pavel Roskin  <proski@gnu.org>

	* tests/atgeneral.m4 (AT_CHECK): Warn if the expected exit status
	is different from what we got. Don't preserve exit status other
	than 77.

2000-10-29  Pavel Roskin  <proski@gnu.org>

	* autoconf.sh: When scanning for unexpanded macros match only
	words beginning with "A?_" and "m4_" or containing "_A?_".
	Strip the comments before the matching. Don't use character
	ranges.

2000-10-29  Pavel Roskin  <proski@gnu.org>

	* acgeneral.m4 (_AC_INIT_PREPARE): Don't use a newline before
	accessing $? - newlines in "trap" reset $? to 0 on FreeBSD 4.0.

2000-10-29  Jim Meyering  <meyering@lucent.com>

	* acgeneral.m4 (AC_MSG_WARN): Now that this macro expands to
	two stmts, enclose them in `{' ... `}'.

2000-10-28  Pavel Roskin  <proski@gnu.org>

	* aclang.m4 (AC_REQUIRE_CPP): Don't default to C++ - call AC_FATAL
	for unsupported languages.

2000-10-27  Pavel Roskin  <proski@gnu.org>

	* acfunctions.m4 (AC_FUNC_MMAP): Remove conftestmmap from the
	shell, not from the test program.

2000-10-27  Pavel Roskin  <proski@gnu.org>
